Actualizando rutas swagger
