# swagger/swagger.json
@@ -60,7 +60,7 @@
                         "description": "body Modificar Admisión content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.{}"
+                            "$ref": "#/definitions/{}"
                         }
                     }
                 ],
@@ -88,7 +88,7 @@
                         "description": "body Agregar Descuento Academico content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.'hola'"
+                            "$ref": "#/definitions/'hola'"
                         }
                     }
                 ],
@@ -155,7 +155,7 @@
                         "description": "body Modificar Descuento Academico content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.{}"
+                            "$ref": "#/definitions/{}"
                         }
                     }
                 ],
@@ -306,7 +306,7 @@
                         "description": "body Agregar EXperiencia Laboral content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.{}"
+                            "$ref": "#/definitions/{}"
                         }
                     }
                 ],
@@ -365,7 +365,7 @@
                         "description": "body Modificar Experiencia Laboral content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.{}"
+                            "$ref": "#/definitions/{}"
                         }
                     }
                 ],
@@ -417,7 +417,7 @@
                         "description": "body Agregar Formacion Academica content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.'hola'"
+                            "$ref": "#/definitions/'hola'"
                         }
                     }
                 ],
@@ -484,7 +484,7 @@
                         "description": "body Modificar Formacion Academica content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.{}"
+                            "$ref": "#/definitions/{}"
                         }
                     }
                 ],
@@ -562,7 +562,7 @@
                         "description": "body for Organizaciona scontent",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.interface"
+                            "$ref": "#/definitions/interface"
                         }
                     }
                 ],
@@ -603,7 +603,7 @@
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/.Organizacion"
+                            "$ref": "#/definitions/models.Organizacion"
                         }
                     },
                     "403": {
@@ -632,7 +632,7 @@
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/.Organizacion"
+                            "$ref": "#/definitions/models.Organizacion"
                         }
                     },
                     "403": {
@@ -655,7 +655,7 @@
                         "description": "body for Actualizar Persona content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.PersonaDatosBasicos"
+                            "$ref": "#/definitions/models.PersonaDatosBasicos"
                         }
                     }
                 ],
@@ -694,7 +694,7 @@
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/.interface{}"
+                            "$ref": "#/definitions/interface{}"
                         }
                     },
                     "403": {
@@ -717,7 +717,7 @@
                         "description": "body for Guardar Persona content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.PersonaDatosBasicos"
+                            "$ref": "#/definitions/models.PersonaDatosBasicos"
                         }
                     }
                 ],
@@ -743,7 +743,7 @@
                         "description": "body for Guardar Persona content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.PersonaDatosBasicos"
+                            "$ref": "#/definitions/models.PersonaDatosBasicos"
                         }
                     }
                 ],
@@ -803,7 +803,7 @@
                         "description": "body for Actualizar Persona content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.PersonaDatosBasicos"
+                            "$ref": "#/definitions/models.PersonaDatosBasicos"
                         }
                     }
                 ],
@@ -829,7 +829,7 @@
                         "description": "body for Guardar datos contacto content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.PersonaDatosBasicos"
+                            "$ref": "#/definitions/models.PersonaDatosBasicos"
                         }
                     }
                 ],
@@ -889,7 +889,7 @@
                         "description": "body for Guardar Persona content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.{}"
+                            "$ref": "#/definitions/{}"
                         }
                     }
                 ],
@@ -917,7 +917,7 @@
                         "description": "body for Registrar Ubicaciones content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/.map[string]interface{}"
+                            "$ref": "#/definitions/map[string]interface{}"
                         }
                     }
                 ],
@@ -930,28 +930,183 @@
                     }
                 }
             }
+        },
+        "/produccion_academica/": {
+            "post": {
+                "tags": [
+                    "produccion_academica"
+                ],
+                "description": "Agregar Producción academica",
+                "operationId": "ProduccionAcademicaController.PostProduccionAcademica",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body Agregar ProduccionAcademica content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/{}"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/produccion_academica/estado_autor_produccion/{id}": {
+            "put": {
+                "tags": [
+                    "produccion_academica"
+                ],
+                "description": "Modificar Estado de Autor de Producción Academica",
+                "operationId": "ProduccionAcademicaController.PutEstadoAutorProduccionAcademica",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "el id del autor a modificar",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body Modificar AutorProduccionAcademica content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/{}"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            }
+        },
+        "/produccion_academica/{id}": {
+            "put": {
+                "tags": [
+                    "produccion_academica"
+                ],
+                "description": "Modificar Producción Academica",
+                "operationId": "ProduccionAcademicaController.PutProduccionAcademica",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "el id de la Produccion academica a modificar",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body Modificar ProduccionAcademica content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/{}"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "produccion_academica"
+                ],
+                "description": "eliminar Produccion Academica por id",
+                "operationId": "ProduccionAcademicaController.DeleteProduccionAcademica",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "Id de la Produccion Academica",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            }
+        },
+        "/produccion_academica/{persona}": {
+            "get": {
+                "tags": [
+                    "produccion_academica"
+                ],
+                "description": "consultar Produccion Academica por persona",
+                "operationId": "ProduccionAcademicaController.GetProduccionAcademica",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "persona",
+                        "description": "Persona",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": ":persona is empty"
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        ".'hola'": {
+        "'hola'": {
+            "title": "'hola'",
             "type": "object"
         },
-        ".Organizacion": {
+        "interface": {
+            "title": "interface",
             "type": "object"
         },
-        ".PersonaDatosBasicos": {
+        "interface{}": {
+            "title": "interface{}",
             "type": "object"
         },
-        ".interface": {
+        "map[string]interface{}": {
+            "title": "map[string]interface{}",
             "type": "object"
         },
-        ".interface{}": {
+        "models.Organizacion": {
+            "title": "Organizacion",
             "type": "object"
         },
-        ".map[string]interface{}": {
+        "models.PersonaDatosBasicos": {
+            "title": "PersonaDatosBasicos",
             "type": "object"
         },
-        ".{}": {
+        "{}": {
+            "title": "{}",
             "type": "object"
         }
     },
@@ -979,6 +1134,10 @@
         {
             "name": "admision",
             "description": "AdmisionController ...\n"
+        },
+        {
+            "name": "produccion_academica",
+            "description": "FormacionController ...\n"
         }
     ]
 }
